--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -16,24 +16,37 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@babel/runtime": "^7.20.0",
-    "@expo/html-elements": "0.4.2",
+    "@expo/html-elements": "^0.4.2",
     "@expo/vector-icons": "^14.0.2",
+    "@gluestack-ui/actionsheet": "^0.2.50",
+    "@gluestack-ui/alert": "^0.1.16",
+    "@gluestack-ui/button": "^1.0.12",
+    "@gluestack-ui/form-control": "^0.1.19",
     "@gluestack-ui/icon": "^0.1.25",
+    "@gluestack-ui/input": "^0.1.36",
+    "@gluestack-ui/modal": "^0.1.39",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.18",
+    "@gluestack-ui/radio": "^0.1.40",
+    "@gluestack-ui/select": "^0.1.31",
+    "@gluestack-ui/textarea": "^0.1.24",
     "@gluestack-ui/toast": "^1.0.8",
     "@legendapp/motion": "^2.4.0",
+    "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/elements": "^2.2.6",
     "@react-navigation/native": "^7.0.14",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.35",
+    "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
     "expo-camera": "^16.0.16",
+    "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.6",
+    "expo-crypto": "~14.0.2",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-location": "^18.0.6",
     "expo-router": "~4.0.17",
@@ -43,29 +56,33 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "nativewind": "^4.1.23",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "qrcode": "^1.5.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.7",
-    "react-native-safe-area-context": "5.2.0",
+    "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.2.0",
+    "react-native-ui-datepicker": "^3.1.2",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwindcss": "3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/jest": "^29.5.14",
-    "@types/react": "^18.3.1",
+    "@types/jest": "^29.5.12",
+    "@types/qrcode": "^1.5.5",
+    "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
-    "jest": "^29.7.0",
+    "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
     "jscodeshift": "0.15.2",
     "react-test-renderer": "18.3.1",
-    "typescript": "*"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
